--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 
 </head>
 <body>
-    <div id="orientationWarning">
-        <p>Por favor, gira tu dispositivo a modo vertical para jugar</p>
-    </div>
+    <h2 class="fixed-h2">Desarrollado x: Gino</h2>
+
 
     <div id="gameContainer">
         <div id="road"></div>
@@ -27,11 +26,6 @@
         <div id="startScreen">
             <div class="instructions-container">
 
-                <h1 style="display: flex; align-items: center; justify-content: center; gap: 10px;">
-                    <span style="color: #79b75f;">●</span> 
-                    Carrera 2D - by Gino 
-                    <span style="color: #FFD700;">●</span>
-                  </h1>  
                      <div class="instructions-content">
                     <p>¡Bienvenido al juego de carreras 2D!</p>
                     <p>Controles:</p>
