--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 
 </head>
 <body>
-    <h2 class="fixed-h2">Desarrollado x: Gino</h2>
-
 
     <div id="gameContainer">
         <div id="road"></div>
@@ -57,7 +55,8 @@
 
         <div id="gameOverScreen">
             <div class="game-over-content">
-                <h1>¡Game Over!</h1>
+                <h1>Gino te dice:
+                    ¡Game Over!</h1>
                 <p>Tu puntuación: <span id="finalScore">0</span></p>
                 <p>Mejor puntuación: <span id="highScore">0</span></p>
                 <button id="restartButton">Jugar de nuevo</button>
